--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,17 +11,20 @@ services:
 
   db:
     image: postgres
+    user: postgres
     env_file:
       - .env
     environment:
+      - POSTGRES_DB=${NAME_DB}
+      - POSTGRES_PASSWORD=${PASSWORD_DB}
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - pg_data:/var/lib/postgresql/data/pgdata
     ports:
-      - '5434:5432'
+      - '5432:5432'
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d postgres -U postgres" ]
-      interval: 5s
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
       timeout: 5s
       retries: 5
 
